# ComfyUI-Multiverse

./: README.md  __init__.py  nodes.py  pyproject.toml
config/: trainer.yaml
config/world_model_env/: fast.yaml
src/: spawn.py  trainer.py  utils.py
src/data/: batch_sampler.py  dataset.py  utils.py
src/player/: keymap.py
